fix(admonition): an artifact in border behind the title

--- a/static/css/admonition.css
+++ b/static/css/admonition.css
@@ -6,7 +6,8 @@ div.admonition {
   background-color: #fcf8e3;
   border: 1px solid;
   box-shadow: 5px 8px #888888;
-  border-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 div.admonition p {
